--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html, body {
 
 body {
   margin: 0;
-  min-height: 100vh; /* lebih fleksibel daripada height: 100% */
+  min-height: 100vh;
   width: 100%;
   display: block;
   justify-content: center;
@@ -55,7 +55,6 @@ button:focus-visible {
 * {
   box-sizing: border-box;
 }
-
 
 @media (prefers-color-scheme: light) {
   :root {
